tests/rosetta/transpiler/OCaml/ftp.error
exit status 2
File "/workspace/mochi/tests/rosetta/transpiler/OCaml/ftp.ml", line 64, characters 31-59:
64 |   let content = ref ((Obj.obj (List.assoc (name) (!dataDir) : Obj.t) : ( string * (string * Obj.t) list ) list)) in
                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         Obj.t
